indico/modules/events/timetable/client/js/UnscheduledContributions.module.scss
// This file is part of Indico.
// Copyright (C) 2002 - 2026 CERN
//
// Indico is free software; you can redistribute it and/or
// modify it under the terms of the MIT License; see the
// LICENSE file for more details.

@use 'base/palette' as *;

.contributions-list {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.contributions-container {
  :global(.ui.basic.button),
  :global(.ui.basic.buttons .button) {
    box-shadow: none;
    -webkit-box-shadow: none;
    margin: 0;
  }

  position: sticky;
  top: 0;
  padding: 1rem 0 1rem 0.5rem;
  align-self: flex-start;
  display: flex;
  flex-direction: column;

  width: min(320px, 100%);
  flex-shrink: 0;
  height: 100%;
  overflow-x: hidden;
  border-left: 1px solid $raincloud-gray;

  .content {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    overflow-x: hidden;
    overflow-y: scroll;
    height: 100%;
    padding: 1rem;

    & > h4 {
      display: flex;

      & > i:global(.icon) {
        margin-left: auto;
      }
    }

    .actions {
      position: relative;
      display: flex;
      gap: 0.5rem;
      justify-content: space-between;

      :global(.ui.icon.input) {
        flex-grow: 1;
      }

      :global(.ui.search.selection.dropdown) {
        width: 100%;
        min-width: 0;
        flex-shrink: 1;
        flex-grow: 0;
        font-size: 1rem;

        > input:global(.search) {
          left: 0;
        }

        > :global(.menu > .header.text) {
          text-wrap: wrap;
        }

        :global(.divider.text) {
          line-height: unset;
          width: 100%;
          flex: 1;
          min-width: 0;
        }

        > button {
          flex-shrink: 0;
          flex-grow: 1;
        }

        input {
          width: 100%;
        }
      }

      :global(.active),
      :global(.active.item) {
        font-weight: normal;

        &:hover {
          background-color: transparent;
        }
      }

      :global(.ui.button) {
        display: flex;
        justify-content: center;
        align-items: center;
        margin: 0;
        font-weight: normal;
        aspect-ratio: 1;
        max-height: 33px;

        &:active {
          background-color: transparent;
        }
      }
    }

    .content {
      display: flex;
      flex-direction: column;
      gap: 0.5rem;
    }

    .contribution {
      cursor: pointer;
      user-select: none;

      :global(.square.outline.icon) {
        cursor: pointer;
      }
    }

    .session {
      display: flex;
      align-items: center;
      gap: 10px;
      margin-left: 0;

      > span {
        text-overflow: ellipsis;
        white-space: nowrap;
        overflow: hidden;
      }
    }
  }
}

.title {
  margin-bottom: 0;
  font-size: 1.125rem;
  font-weight: bold;
  padding: 0 1rem;
}

.pane-resize-handle {
  width: 12px;
  min-width: 12px;
  margin-left: -10px;
  height: 100%;
  cursor: ew-resize;
  user-select: none;
  border-right: 2px solid $raincloud-gray;

  &:hover {
    border-right: 4px solid #007cac;
  }
}

.session-filter {
  position: relative;

  :global(.menu > .item) {
    display: flex;
    align-items: center;
  }
}

.session {
  width: 100%;
}

:global(.ui.basic.button).add-session-container {
  display: flex;
  width: auto;
  min-height: 50px;
  border-radius: 4px;
  align-items: center;
  justify-content: center;
  outline: dashed 1px grey;
  cursor: pointer;

  &:hover {
    :global(.ui.basic.button).add-session-container {
      color: rgba(0, 0, 0, 0.8);
    }
  }
}

.add-session-container {
  display: flex;
  width: auto;
  min-height: 50px;
  border-radius: 4px;
  align-items: center;
  justify-content: center;
  outline: dashed 1px grey;
  cursor: pointer;

  &:hover {
    :global(.ui.basic.button).add-session-container {
      color: rgba(0, 0, 0, 0.8);
    }
  }
}

.session-list {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.session-wrapper {
  position: relative;
  display: flex;
  padding: 0;
  border-radius: 4px;
  border: 1px solid $raincloud-gray;

  .session-actions {
    position: absolute;
    right: 0.5rem;
    bottom: 0.5rem;
    left: 0.5rem;
    top: 0.5rem;
    justify-content: flex-end;
    pointer-events: none;
    display: flex;
    opacity: 0;
    visibility: hidden;
    transform: translateX(10px);

    transition:
      opacity 0.2s ease,
      transform 0.2s ease;
    background: linear-gradient(
      90deg,
      rgba(255, 255, 255, 0) 32%,
      rgba(255, 255, 255, 1) 66%
    );

    button {
      pointer-events: all;
    }
  }

  &:hover {
    .session-actions {
      opacity: 1;
      visibility: visible;
      transform: translateX(0);
    }
  }
}

.session-content {
  position: relative;
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 0.5rem;
  width: 100%;

  &::before {
    content: '';
    position: absolute;
    left: 0.5rem;
    top: 0.5rem;
    bottom: 0.5rem;
    width: 5px;
    border-radius: 4px;
    background: var(--session-color);
  }
}

.session-title {
  display: -webkit-box;
  -webkit-box-orient: vertical;
  font-weight: bold;
  overflow: hidden;
  word-break: break-word;
  padding: 0.5rem 1rem;
}

.session-actions {
  display: flex;
  flex-direction: row;
}

.session-color {
  height: 100%;
  width: 5px;
  border-radius: 4px;
}

.filter-clear {
  position: absolute;
  top: -6px;
  right: -6px;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  border: 0;
  padding: 0;
  font-size: 12px;
  line-height: 16px;
  cursor: pointer;
}

.filter-trigger-wrapper {
  position: relative;
  display: inline-flex;
}

.filter-badge {
  position: absolute;
  top: 0;
  right: 0;
  width: 12px;
  height: 13px;
  border: 0;
  border-radius: 50%;
  padding: 0;
  background: $red;
  color: $white;
  font-size: 9px;
  line-height: 16px;
  cursor: pointer;

  display: flex;
  align-items: center;
  justify-content: center;
}

.filter-cross {
  display: none;
  font-size: 10px;
  line-height: 1;
}

.filter-badge:hover {
  .filter-count {
    display: none;
  }

  .filter-cross {
    display: inline;

    :global(.close.icon).filter-cross {
      margin: 0;
    }
  }
}

.filter-count:empty::before {
  content: '';
  width: 5px;
  height: 5px;
  border-radius: 50%;
  background: $white;
  display: block;
}

